k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellowbooks-api
  namespace: yellowbooks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yellowbooks-api
  template:
    metadata:
      labels:
        app: yellowbooks-api
    spec:
      containers:
        - name: api
          image: <ECR_API_IMAGE>
          ports:
            - containerPort: 4000
