k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: yellowbooks-api
  namespace: yellowbooks
spec:
  selector:
    app: yellowbooks-api
  ports:
    - port: 4000
      targetPort: 4000
