k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: yellowbooks-web
  namespace: yellowbooks
spec:
  selector:
    app: yellowbooks-web
  ports:
    - port: 80
      targetPort: 3000
